HelloUltraviolet/Fixtures/RejectedSource/Keys/SpeculativeImpureCall/Source/Main.uv
//! Rejected key-system specimen for an impure capability call inside speculative execution.

public procedure speculativeImpureCallReference(context: Context) -> i32 {
    var shared_value: shared i32 = 1
    %speculative write shared_value {
        context.io~>exists("HelloUltraviolet")
        shared_value = 2
    }
    return 0
}
